--- a/FinalYRpRoject.ipynb
+++ b/FinalYRpRoject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0jV/iQikRbIR2CYw2+Wqq",
+      "authorship_tag": "ABX9TyNe105O47acZW0CTiXSXo0j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "import pandas as pd\n",
         "import seaborn as sns"
       ],
-      "execution_count": 61,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -64,22 +64,22 @@
           "height": 72
         },
         "id": "r6Xjgh3Ysyao",
-        "outputId": "24088835-9216-4161-b88c-b6838295eb8c"
+        "outputId": "61db841b-4da2-4a24-938a-e91d0e854ea3"
       },
       "source": [
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 62,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-810a37e4-5446-4d19-891b-a18abd13c0bf\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-2276112b-c52e-4dba-8391-e413c580841f\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-810a37e4-5446-4d19-891b-a18abd13c0bf\">\n",
+              "     <output id=\"result-2276112b-c52e-4dba-8391-e413c580841f\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -96,7 +96,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving data.csv to data (2).csv\n"
+            "Saving data.csv to data.csv\n"
           ],
           "name": "stdout"
         }
@@ -111,7 +111,7 @@
         "import io\n",
         "df = pd.read_csv(io.BytesIO(uploaded['data.csv']))"
       ],
-      "execution_count": 154,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -122,12 +122,12 @@
           "height": 241
         },
         "id": "yhhNXtpXtEq7",
-        "outputId": "d3e6b99b-3cf6-4af0-932f-c4f8a0ec008b"
+        "outputId": "da516f00-df1d-4e99-a3b1-cb6fe64ec36a"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 155,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +385,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 155
+          "execution_count": 4
         }
       ]
     },
@@ -396,12 +396,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yHAPOmT9tK07",
-        "outputId": "4a0503de-72dd-4501-8f49-32d841d685af"
+        "outputId": "ef05e8dc-50e6-438f-a2cc-eabdae47670a"
       },
       "source": [
         "df.info()"
       ],
-      "execution_count": 156,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,13 +458,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LAE8B3NstQRY",
-        "outputId": "688b42f6-a175-4b3a-9cc9-e1b385a39211"
+        "outputId": "7396bf7c-c882-4ecd-c8a3-9e604f0d1e80"
       },
       "source": [
         "# return all the columns with null values count\n",
         "df.isna().sum()"
       ],
-      "execution_count": 157,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +509,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 157
+          "execution_count": 6
         }
       ]
     },
@@ -520,13 +520,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y58Hhv3LtVNj",
-        "outputId": "df2d770d-d982-46d6-d130-2a46f1d69a7a"
+        "outputId": "b32edf98-2973-4207-e73d-dd5b1d6522d5"
       },
       "source": [
         "# return the size of dataset\n",
         "df.shape"
       ],
-      "execution_count": 158,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +538,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 158
+          "execution_count": 7
         }
       ]
     },
@@ -551,7 +551,7 @@
         "# remove the column\n",
         "df=df.dropna(axis=1)"
       ],
-      "execution_count": 159,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -561,14 +561,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hoYY3lckth8o",
-        "outputId": "a69dde9b-cb5b-4d77-8e08-5c1e24681be5"
+        "outputId": "12972108-2cb5-4355-ef90-41791f370238"
       },
       "source": [
         "\n",
         "# shape of dataset after removing the null column\n",
         "df.shape"
       ],
-      "execution_count": 160,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -580,7 +580,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 160
+          "execution_count": 9
         }
       ]
     },
@@ -592,13 +592,13 @@
           "height": 334
         },
         "id": "9Uwag9OhtpQv",
-        "outputId": "2ecce429-1a36-4014-8e93-edf4a5f2b6e2"
+        "outputId": "89891804-91b4-4077-dd1a-0e4d71ee923d"
       },
       "source": [
         "# describe the dataset\n",
         "df.describe()"
       ],
-      "execution_count": 161,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -949,7 +949,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 161
+          "execution_count": 10
         }
       ]
     },
@@ -960,13 +960,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u8uhRgddtuVK",
-        "outputId": "f79c1595-1774-4ee6-9207-64edf3a9c4bc"
+        "outputId": "48360ea3-759c-45a4-84ef-2aec777cd064"
       },
       "source": [
         "# Get the count of malignant<M> and Benign<B> cells\n",
         "df['diagnosis'].value_counts()"
       ],
-      "execution_count": 162,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -980,7 +980,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 162
+          "execution_count": 11
         }
       ]
     },
@@ -992,12 +992,12 @@
           "height": 350
         },
         "id": "Rme9d5cQtzJB",
-        "outputId": "3ccb9f13-4d27-4a6c-c4b6-68ceb3157e09"
+        "outputId": "5656b7cd-9d6d-4b83-eceb-f93d59b5b126"
       },
       "source": [
         "sns.countplot(df['diagnosis'],label=\"count\")"
       ],
-      "execution_count": 163,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1011,13 +1011,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fc0f6e3d750>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f4921515650>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 163
+          "execution_count": 12
         },
         {
           "output_type": "display_data",
@@ -1045,7 +1045,7 @@
         "labelencoder_Y = LabelEncoder()\n",
         "df.iloc[:,1]=labelencoder_Y.fit_transform(df.iloc[:,1].values)"
       ],
-      "execution_count": 164,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1056,12 +1056,12 @@
           "height": 241
         },
         "id": "vWLxO1lMt-Vp",
-        "outputId": "00680ee0-4c39-4250-81a5-7e83e8e20844"
+        "outputId": "a916d3cf-4485-4978-a7f2-22520efd3bb3"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 165,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1313,7 +1313,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 165
+          "execution_count": 14
         }
       ]
     },
@@ -1325,24 +1325,24 @@
           "height": 567
         },
         "id": "fDFgs0cLuD7_",
-        "outputId": "1c1292c9-e174-413c-96fc-50db18974af0"
+        "outputId": "48a5c4eb-1c2b-429e-8324-38a95a1f3d8a"
       },
       "source": [
         "sns.pairplot(df.iloc[:,1:5],hue=\"diagnosis\")"
       ],
-      "execution_count": 166,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x7fc0f5f57410>"
+              "<seaborn.axisgrid.PairGrid at 0x7f491f2506d0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 166
+          "execution_count": 15
         },
         {
           "output_type": "display_data",
@@ -1367,26 +1367,26 @@
           "height": 1000
         },
         "id": "fI0uiI10uP5Y",
-        "outputId": "22ebf75d-a16d-4a15-e210-71543bf10cf2"
+        "outputId": "e949ea1b-bfd1-430b-d499-b077c77c5d53"
       },
       "source": [
         "# visualize the correlation\n",
         "plt.figure(figsize=(20,20))\n",
         "sns.heatmap(df.iloc[:,1:31].corr(),annot=True,fmt=\".0%\")"
       ],
-      "execution_count": 167,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fc0f5b0cc50>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f491459a3d0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 167
+          "execution_count": 16
         },
         {
           "output_type": "display_data",
@@ -1412,7 +1412,7 @@
         "list_drop = ['perimeter_mean','area_mean','concave points_mean','concavity_mean','radius_se','radius_worst','perimeter_worst','area_worst','concave points_worst','area_se','texture_worst','smoothness_worst','compactness_se','concavity_worst','compactness_worst','fractal_dimension_worst','symmetry_worst','concavity_se']\n",
         "df.drop(list_drop, axis=1, inplace=True)"
       ],
-      "execution_count": 168,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1423,12 +1423,12 @@
           "height": 241
         },
         "id": "dNMg83r5uv8K",
-        "outputId": "8252212a-a642-4829-a264-fb16e84d8fdb"
+        "outputId": "28806305-c702-4183-a68d-a7452026834f"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 169,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1572,7 +1572,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 169
+          "execution_count": 18
         }
       ]
     },
@@ -1583,12 +1583,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "solrGnjs7FUB",
-        "outputId": "486350e7-50f2-461c-c268-2f992882928f"
+        "outputId": "546c8510-4c39-493f-eb2b-47f431115ce2"
       },
       "source": [
         "df.shape"
       ],
-      "execution_count": 170,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1600,7 +1600,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 170
+          "execution_count": 19
         }
       ]
     },
@@ -1612,26 +1612,26 @@
           "height": 1000
         },
         "id": "NxYz4zBCvjXO",
-        "outputId": "fd262e12-642a-4911-8130-c9a5fa4e7e1f"
+        "outputId": "a05002c1-49f1-4a45-cc82-89208737ceeb"
       },
       "source": [
         "# visualize the correlation\n",
         "plt.figure(figsize=(20,20))\n",
         "sns.heatmap(df.iloc[:,1:31].corr(),annot=True,fmt=\".0%\")"
       ],
-      "execution_count": 171,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fc0f5a14950>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f491244c650>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 171
+          "execution_count": 20
         },
         {
           "output_type": "display_data",
@@ -1655,12 +1655,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GhmQMXR5yEjJ",
-        "outputId": "9bd123a3-1b1c-4b74-d2d5-075a5abd3d59"
+        "outputId": "b8cc9dbf-a084-4f7d-e3a2-58d4c8cf8ffd"
       },
       "source": [
         "df.shape"
       ],
-      "execution_count": 172,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1672,7 +1672,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 172
+          "execution_count": 30
         }
       ]
     },
@@ -1683,10 +1683,10 @@
       },
       "source": [
         "# split the dataset into dependent(X) and Independent(Y) datasets\n",
-        "X=df.iloc[:,2:27].values\n",
+        "X=df.iloc[:,2:13].values\n",
         "Y=df.iloc[:,1].values"
       ],
-      "execution_count": 173,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -1699,7 +1699,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train,X_test,Y_train,Y_test=train_test_split(X,Y,test_size=0.20,random_state=0)"
       ],
-      "execution_count": 174,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -1713,7 +1713,7 @@
         "X_train=StandardScaler().fit_transform(X_train)\n",
         "X_test=StandardScaler().fit_transform(X_test)"
       ],
-      "execution_count": 175,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -1747,7 +1747,7 @@
         "        \n",
         "        return log,tree,forest"
       ],
-      "execution_count": 176,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -1757,19 +1757,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uJYYMGGYxnA9",
-        "outputId": "cf1ce3f3-e15c-43ee-c7a2-05ea31ce9779"
+        "outputId": "707da804-2931-44cd-fb9d-d81cdd599291"
       },
       "source": [
         "model=models(X_train,Y_train)"
       ],
-      "execution_count": 177,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0]logistic regression accuracy: 0.9516483516483516\n",
+            "[0]logistic regression accuracy: 0.9494505494505494\n",
             "[1]Decision tree accuracy: 1.0\n",
-            "[2]Random forest accuracy: 0.9978021978021978\n"
+            "[2]Random forest accuracy: 1.0\n"
           ],
           "name": "stdout"
         }
@@ -1782,7 +1782,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ni4Tv7dZxup_",
-        "outputId": "5065ada7-a7ae-48b0-b3fa-e32b0fe598c4"
+        "outputId": "f9ad3ccc-7531-49a9-f126-e587419646d6"
       },
       "source": [
         "# testing the models/result\n",
@@ -1795,7 +1795,7 @@
         "    print(classification_report(Y_test,model[i].predict(X_test)))\n",
         "    print('Accuracy : ',accuracy_score(Y_test,model[i].predict(X_test)))"
       ],
-      "execution_count": 178,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -1814,25 +1814,25 @@
             "Model 1\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.87      0.90      0.88        67\n",
-            "           1       0.84      0.81      0.83        47\n",
+            "           0       0.87      0.87      0.87        67\n",
+            "           1       0.81      0.81      0.81        47\n",
             "\n",
-            "    accuracy                           0.86       114\n",
-            "   macro avg       0.86      0.85      0.85       114\n",
-            "weighted avg       0.86      0.86      0.86       114\n",
+            "    accuracy                           0.84       114\n",
+            "   macro avg       0.84      0.84      0.84       114\n",
+            "weighted avg       0.84      0.84      0.84       114\n",
             "\n",
-            "Accuracy :  0.8596491228070176\n",
+            "Accuracy :  0.8421052631578947\n",
             "Model 2\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.88      0.96      0.91        67\n",
-            "           1       0.93      0.81      0.86        47\n",
+            "           0       0.89      0.97      0.93        67\n",
+            "           1       0.95      0.83      0.89        47\n",
             "\n",
-            "    accuracy                           0.89       114\n",
-            "   macro avg       0.90      0.88      0.89       114\n",
-            "weighted avg       0.90      0.89      0.89       114\n",
+            "    accuracy                           0.91       114\n",
+            "   macro avg       0.92      0.90      0.91       114\n",
+            "weighted avg       0.92      0.91      0.91       114\n",
             "\n",
-            "Accuracy :  0.8947368421052632\n"
+            "Accuracy :  0.9122807017543859\n"
           ],
           "name": "stdout"
         }
@@ -1845,7 +1845,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yGjgxA-Px-h4",
-        "outputId": "979f176a-2a97-40ba-d263-ba60feac2eb0"
+        "outputId": "a3c0ab8f-c409-44d5-a910-5dba07c7469f"
       },
       "source": [
         "# prediction of random-forest\n",
@@ -1855,7 +1855,7 @@
         "print('Actual values:')\n",
         "print(Y_test)"
       ],
-      "execution_count": 181,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -1882,13 +1882,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nj1qBDhH8K99",
-        "outputId": "1acf1792-9c74-422a-ac32-2efbc81ae39d"
+        "outputId": "43431e9a-bc45-44cd-812a-bf81ec8220d1"
       },
       "source": [
         "from joblib import dump\n",
         "dump(model[2],\"Cancer_prediction.joblib\")"
       ],
-      "execution_count": 180,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1900,7 +1900,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 180
+          "execution_count": 60
         }
       ]
     }
